[gd_scene load_steps=5 format=3 uid="uid://pu3wcj43djjh"]

[ext_resource type="Script" path="res://scripts/GameBoard.gd" id="1_2x8k3"]
[ext_resource type="Script" path="res://scripts/GameUI.gd" id="2_4y7z1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.2, 0.3, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_1"]
default_font_size = 24
Button/styles/normal = SubResource("StyleBoxFlat_1")

[node name="MainGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.15, 0.2, 1)

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource("1_2x8k3")

[node name="Background" type="ColorRect" parent="GameBoard"]
offset_left = 30.0
offset_top = 190.0
offset_right = 670.0
offset_bottom = 830.0
color = Color(0.2, 0.2, 0.3, 0.8)

[node name="GameUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_4y7z1")

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopPanel" type="HBoxContainer" parent="GameUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ScoreContainer" type="VBoxContainer" parent="GameUI/VBoxContainer/TopPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScoreLabel" type="Label" parent="GameUI/VBoxContainer/TopPanel/ScoreContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="LevelContainer" type="VBoxContainer" parent="GameUI/VBoxContainer/TopPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LevelLabel" type="Label" parent="GameUI/VBoxContainer/TopPanel/LevelContainer"]
layout_mode = 2
text = "Level 1"
horizontal_alignment = 1

[node name="MovesContainer" type="VBoxContainer" parent="GameUI/VBoxContainer/TopPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MovesLabel" type="Label" parent="GameUI/VBoxContainer/TopPanel/MovesContainer"]
layout_mode = 2
text = "Moves: 30"
horizontal_alignment = 1

[node name="TargetContainer" type="VBoxContainer" parent="GameUI/VBoxContainer/TopPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TargetLabel" type="Label" parent="GameUI/VBoxContainer/TopPanel/TargetContainer"]
layout_mode = 2
text = "Target: 10000"
horizontal_alignment = 1

[node name="TargetProgress" type="ProgressBar" parent="GameUI/VBoxContainer/TopPanel/TargetContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="GameUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BottomPanel" type="HBoxContainer" parent="GameUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="MenuButton" type="Button" parent="GameUI/VBoxContainer/BottomPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Menu"

[node name="PauseButton" type="Button" parent="GameUI/VBoxContainer/BottomPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pause"

[node name="GameOverPanel" type="Panel" parent="GameUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="GameUI/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Game Over!"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="GameUI/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Final Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameUI/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="LevelCompletePanel" type="Panel" parent="GameUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI/LevelCompletePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelScoreLabel" type="Label" parent="GameUI/LevelCompletePanel/VBoxContainer"]
layout_mode = 2
text = "Level Complete!"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="GameUI/LevelCompletePanel/VBoxContainer"]
layout_mode = 2
text = "Continue"
